<resources>
    <string name="app_name">恋恋日记本</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_edit_dairy">EditDairyActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="tool_bar_more_function">更多功能</string>
    <string name="tool_bar_setting">设置</string>
    <string name="welcome_sign">欢迎使用恋恋日记本，请您</string>
    <string name="welcome_register">注册</string>
    <string name="welcome_login">登录</string>
    <string name="send_code">发送验证码</string>
    <string name="resend_code">%s秒后重新发送</string>
    <string name="post">提交</string>
    <string name="register_skip">我想先看看，暂不注册</string>
    <string name="register_account">手机号</string>
    <string name="register_code">验证码</string>
    <string name="register_password">密码</string>
    <string name="register_confirm_password">确认密码</string>
    <string name="toast_password_not_same">密码不一致！</string>
    <string name="toast_not_permission_sms">没有发送短信权限，无法验证！</string>
    <string name="dialog_sms_title">短信权限</string>
    <string name="dialog_sms_message">为了发送短信验证码，请求开启短信权限。若禁止，则无法注册！</string>
    <string name="ok">知道了</string>
    <string name="reset_pwd_title">重置密码</string>
    <string name="forget_item_title">选择重置密码方式</string>
    <string name="forget_item_phone">通过手机号重置</string>
    <string name="forget_item_email">通过邮箱重置</string>
    <string name="reset_pwd_success">密码重置成功</string>
    <string name="phone_exists_login">手机号已存在，请登录</string>
    <string name="phone_not_exists_register">手机号不存在，请注册</string>
    <string name="share">分享</string>
    <string name="edit">编辑</string>
    <string name="save_success">保存成功</string>
    <string name="diary">日记</string>
    <string name="edit_diary">编辑日记</string>
    <string name="diary_open_edit">已开启编辑模式</string>
    <string name="hint_diary_title">输入标题</string>
    <string name="hint_diary_content">输入日记内容</string>
    <string name="diary_select_weather">选择天气</string>
    <string name="diary_select_mood">选择心情</string>
    <string name="diary_select_bg">选择背景</string>
    <string name="label">标签</string>
    <string name="label_add">添加标签</string>
    <string name="size_small">小(12sp)</string>
    <string name="size_middle">中(14sp)</string>
    <string name="size_large">大(16sp)</string>
    <string name="size_x_large">加大(20sp)</string>
    <string name="size_xx_large">超大(24sp)</string>
    <string name="title_label">标签</string>
    <string-array name="welcome_tips">
        <item>你好呀，我是小恋</item>
        <item>小恋可以陪你聊天哦</item>
        <item>长夜漫漫无心睡眠,我以为只有我睡不着,原来客官你也睡不着啊 </item>
        <item>多情自古伤离别，更那堪，冷落清秋节</item>
        <item>做人如果没有梦想，和咸鱼有什么区别？</item>
        <item>同志们，八年抗战开始啦</item>
        <item>小明长期被爸妈蒙在鼓励，导致窒息而死</item>
        <item>我吃了麻婆豆腐，被麻婆打了一顿</item>
        <item>杜甫读书破万卷，被图书馆管理员抓了个正着</item>
        <item>自从我背井离乡，家乡人民就再也没喝过井水了</item>
        <item>王老汉突然掉到井里，机智小明连忙盖上井盖防止其他人掉下去</item>
        <item>严重的恐高症害得我终身无法低头捡到钱</item>
        <item>客官有什么吩咐吗</item>
        <item>客官你终于来了，小恋已在此等候多时了</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_home">恋恋日记本</string>
    <string name="my_diary">日记本</string>
    <string name="my_money_book">记账本</string>
    <string name="my_stiky_note">便利贴</string>
    <string name="my_plan">计划表</string>
    <string name="my_anniversary">纪念日</string>
    <string name="my_robot">小恋机器人</string>
    <string name="title_activity_plan">计划表</string>
    <string name="title_activity_plan_details">PlanDetailsActivity</string>
    <string name="title_activity_plan_edit">编辑计划表</string>
    <string name="title_activity_stiky_note">便利贴</string>
    <string name="title_activity_edit_note">编辑便利贴</string>
    <string name="title_activity_anniversary">纪念日</string>
    <string name="title_activity_anniversarye_edit">编辑纪念日</string>
    <string name="title_activity_money_book">记账本</string>
    <string name="title_activity_money_edit">编辑记账本</string>
    <string name="title_activity_robot">小恋机器人</string>
    <string name="tv_setup_password">设置密码</string>
    <string name="et_input_password">输入密码</string>
    <string name="et_confirm_password">确认密码</string>
    <string name="acc_username">一颗开花的树</string>
    <string name="acc_setting_username">设置用户名</string>
    <string name="acc_setting_head_photo">设置头像</string>
    <string name="acc_input_username">请输入用户名</string>
    <string name="ann_content">纪念内容</string>
    <string name="ann_person">名字</string>
    <string name="ann_relationship">关系</string>
    <string name="ann_remark">备注</string>
    <string name="ann_person_hint">ta的名字是？</string>
    <string name="ann_relationship_hint">ta是你的谁？</string>
    <string name="ann_relationship_remark">有什么补充吗？</string>
    <string name="ann_date">选择日期</string>
    <string name="ann_time">选择时间</string>
    <string name="ann_float_content">长按可选择图标</string>
    <string name="ann_isRemind">是否提醒</string>
    <string name="ann_unremind">不提醒</string>
    <string name="ann_remind">提醒</string>
    <string name="ann_remind_sms">短信提醒</string>
    <string name="ann_remind_calendar">日历提醒</string>
    <string name="ann_remind_date">提醒日期:</string>
    <string name="ann_hint_content">请输入内容</string>
    <string name="ann_choose_img">选择纪念类型图片</string>
    <string name="edit_diary_title">请输入标题</string>
    <string name="edit_diary_content">请输入日记内容</string>
    <string name="ann_dtl_days">%s天</string>
    <string name="toast_ann_content">纪念内容不能为空</string>
    <string name="toast_ann_person">名字不能为空~</string>
    <string name="toast_ann_relationship">关系也填一下吧~</string>
    <string name="hint_input">Input</string>
    <string name="hint_click">Click</string>
    <string name="edit_money_content">内容</string>
    <string name="edit_money_price">单价</string>
    <string name="edit_money_state">状态</string>
    <string name="edit_money_income">收入</string>
    <string name="edit_money_out">支出</string>
    <string name="edit_money_transfer">转账</string>
    <string name="money_count">数量</string>
    <string name="money_content">消费内容</string>
    <string name="money_classify">类别</string>
    <string name="money_account">账户</string>
    <string name="money_date">日期</string>
    <string name="money_price">价格</string>
    <string name="money_state">状态</string>
    <string name="money_select_classify">请选择分类</string>
    <string name="money_select_account">请选择账户</string>
    <string name="toast_money_content">消费内容不能为空</string>
    <string name="toast_money_price">价格不能为空</string>
    <string name="toast_money_classify">类别不能为空</string>
    <string name="toast_money_account">账户不能为空</string>
    <string name="toast_edit_not_null">输入不能为空</string>
    <string name="toast_is_existed">已存在</string>
    <string name="total_income">收入：</string>
    <string name="total_expense">支出：</string>
    <string name="total_yuan">￥</string>
    <string name="total_yuan_">￥;</string>
    <string name="today_spend" formatted="false">总收入：%1$s元&#160;&#160;总支出：%2$s元</string>
    <string name="expense">-%s元</string>
    <string name="income">+%s元</string>
    <string name="input_balance">输入余额</string>
    <string name="look_details_expense">查看以往详细收支</string>
    <string name="look_account_balance">查看账户余额</string>
    <string name="expense_summary"><Data><![CDATA[ <font color="#ffaaaa">%1$s</font>&#160;-&#160;<font color="#ffaaaa">%2$s</font>&#160;共支出&#160;<font color="#e91e63" size=4>-%3$s</font>元，收入&#160;<font color="#8BC34A" size=6>+%4$s</font>元，其中：<br>%5$s<br /> ]]> </Data></string>
    <string name="title_add_classify">添加分类</string>
    <string name="title_add_accouunt">添加账户</string>
    <string name="title_add_ann">添加纪念日类型</string>
    <string name="title_select_icon">"请选择图标"</string>
    <string name="edit_plan_content">计划内容</string>
    <string name="edit_plan_hint_content">请输入内容</string>
    <string name="edit_plan_time">计划时间</string>
    <string name="edit_plan_import">重要程度</string>
    <string name="edit_plan_finish_state">完成状态</string>
    <string name="edit_plan_unFinish">未完成</string>
    <string name="edit_plan_finish">已完成</string>
    <string name="edit_plan_hint_time1">开始时间</string>
    <string name="edit_plan_hint_time2">结束时间</string>
    <string name="edit_plan_import1">重要又紧急</string>
    <string name="edit_plan_import2">重要但不紧急</string>
    <string name="edit_plan_import3">紧急但不重要</string>
    <string name="edit_plan_import4">不紧急也不重要</string>
    <string name="plan_title">计划表</string>
    <string name="plan_id">序号</string>
    <string name="plan_date">日期</string>
    <string name="plan_content">计划内容</string>
    <string name="btn_confirm">确定</string>
    <string name="settiing_password">设置日记本密码锁</string>
    <string name="settiing_whole_password">设置软件密码锁</string>
    <string name="text1">加密整个软件</string>
    <string name="text2">只加密日记本</string>
    <string name="settiing_img_password">设置图案密码锁</string>
    <string name="settiing_input_password">设置输入框密码锁</string>
    <string name="app_description">记录日常的点点滴滴</string>
    <string name="app_version">版本号：</string>
    <string name="app_weibo">新浪微博：恋恋日记本</string>
    <string name="app_author">作者：Carrie-L</string>
    <string name="app_email">联系邮箱：ygzrsno@163.com</string>
    <string name="home_style1">粉红心情</string>
    <string name="home_style2">盛夏气息</string>
    <string name="home_style3">暗夜城堡</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_new_conversation">新建会话</string>
    <string name="feedback_title">用户反馈</string>
    <string name="fb_fragment_activity">使用 SDK Fragment</string>
    <string name="sdk_fb_activity">使用 SDK Activity</string>
    <string name="multi_conversation_activity">多会话模式</string>
    <string name="title_item_list">反馈列表</string>
    <string name="fb_help_activity">帮助页面</string>
    <string name="title_activity_main_password">WWholePasswordActivity</string>
    <string name="enter">进入主界面</string>
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="forgetPwd"><u>忘记密码</u></string>
    <string name="OK">确认</string>
    <string name="okGO">前往设置</string>
    <string name="Cancel">取消</string>
    <string name="account_title">账户设置</string>
    <string name="account_usename">设置用户名：</string>
    <string name="account_useemail">设置邮箱：</string>
    <string name="account_hintemail">邮箱用于找回密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="toast_username_null">用户名不能为空</string>
    <string name="toast_phone_null">手机号不能为空</string>
    <string name="toast_code_null">验证码不能为空</string>
    <string name="toast_userpwd_null">密码不能为空</string>
    <string name="toast_confirm_pwd_null">确认密码不能为空</string>
    <string name="toast_userpwd_length">密码长度必须大于6</string>
    <string name="toast_useremail_null">邮箱不能为空</string>
    <string name="toast_useremail_valid">不是合法的邮箱</string>
    <string name="toast_userauthcode_null">验证码不能为空</string>
    <string name="toast_register_success">注册成功</string>
    <string name="toast_register_failed_email">注册失败，邮箱已存在，请您登录</string>
    <string name="toast_register_failed_username">注册失败，用户名已存在</string>
    <string name="toast_register_failed_username_pwd_null">注册失败，用户名或密码为空</string>
    <string name="toast_register_failed_phone_exists">手机号已存在，请登录</string>
    <string name="toast_login_success">登录成功</string>
    <string name="toast_login_failed_incorrect">登录失败，用户名或密码不正确</string>
    <string name="toast_login_failed">登录失败</string>
    <string name="toast_network_outtime">网络超时</string>
    <string name="btn_cancel">取消</string>
</resources>