<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="0dp"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include layout="@layout/layout_title_bar" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/logo" />

    <TextView
        style="@style/textStyle"
        android:text="@string/app_name"
        android:textColor="@color/green"
        android:textSize="22sp" />

    <TextView
        style="@style/textStyle"
        android:text="@string/app_description"
        android:textColor="@color/green" />

    <TextView
        style="@style/textStyle"
        android:id="@+id/tv_version"
        android:layout_marginTop="36dp"
        android:text="@string/app_version"
        android:textColor="@color/green" />
    
    <TextView
        style="@style/textStyle"
        android:layout_marginTop="36dp"
        android:text="@string/app_author"
        android:textColor="@color/green" />

    <TextView
        style="@style/textStyle"
        android:text="@string/app_weibo"
        android:textColor="@color/green" />

    <TextView
        style="@style/textStyle"
        android:text="@string/app_email"
        android:textColor="@color/green" />

    <include
        layout="@layout/layout_bottom_bg"/>

</LinearLayout>