<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="@drawable/bg"
    android:gravity="center_horizontal">
    
    <TextView
        android:id="@+id/tv_setup_password"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:text="@string/tv_setup_password"
        android:textSize="20sp"
        android:background="@color/azure"
        android:gravity="center"
        />
    <EditText
        android:id="@+id/et_input_password"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_input_password"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_confirm_password"
        android:inputType="textPassword"
        />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:gravity="center">

        <Button
            android:background="@drawable/button"
            android:id="@+id/btn_confirm"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_confirm" />

        <Button
            android:background="@drawable/button"
            android:id="@+id/btn_cancel"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel" />
    </LinearLayout>

</LinearLayout>
