<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent" 
    android:background="@drawable/bg"
    android:gravity="center_horizontal" >
    
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:text="@string/account_title"
        android:gravity="center"
        android:textSize="20sp"
        />
    
    <ImageView
        android:id="@+id/line"
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:layout_below="@id/tv_title"
        android:background="@drawable/horizontal_line"
        />
    
    <!-- 用户名 -->
    
    <TextView
        android:id="@+id/tv_username"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_below="@id/line"
        android:text="@string/account_usename"
        android:gravity="center_vertical"
        />
    
    <EditText
        android:id="@+id/et_username"
         android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_toRightOf="@id/tv_username"
        android:layout_below="@id/line"
        android:gravity="center"
        />
    
    <!-- 邮箱 -->
    
    <TextView
        android:id="@+id/tv_useremail"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:text="@string/account_useemail"
        android:layout_below="@id/tv_username"
        android:gravity="center_vertical"
        />
    
    <EditText
        android:id="@+id/et_useremail"
         android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_toRightOf="@id/tv_useremail"
        android:layout_below="@id/tv_username"
        android:gravity="center"
        android:hint="@string/account_hintemail"
        android:inputType="textEmailAddress"
        />
  
    
    <!-- 按钮 -->
    
     <LinearLayout
        android:id="@+id/ll_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal" 
        android:layout_below="@id/tv_useremail" >

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/item_bg2"
            android:text="@string/btn_confirm"
            android:textColor="@color/light_pink" />

        <View
            android:layout_width="40dp"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/item_bg2"
            android:text="@string/btn_cancel"
            android:textColor="@color/light_pink" />
    </LinearLayout>
    

</RelativeLayout>
