<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/layout_title_bar" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_whole_password"
            style="@style/SettingPasswordContent"
            android:text="@string/text1" />

        <CheckBox
            android:id="@+id/cb_whole_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_diary_password"
            style="@style/SettingPasswordContent"
            android:text="@string/text2" />

        <CheckBox
            android:id="@+id/cb_diary_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_setting_image_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/bg_item"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/settiing_img_password" />

    <TextView
        android:id="@+id/tv_setting_input_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_item"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/settiing_input_password" />

</LinearLayout>