<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/et_input_password" 
        android:layout_marginTop="48dp"
        android:textColor="@color/green"/>
    
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/bg_edit_content"
        />
    
    <TextView
        android:id="@+id/tv_enter"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/bg_item"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/enter" />

    <TextView
        android:id="@+id/forgetPwd"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="right|center_vertical"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/forgetPwd" />
    
     <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:gravity="center"
        android:layout_marginTop="10dp"
        />

</LinearLayout>
